[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Guards/DeskGuard_Blue.png" type="Texture" id=1]
[ext_resource path="res://Src/Notifier/Notifier.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Guard/DeskGuard.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/chair_startle.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 4, 5, 4, 6, 7 ]
}

[node name="DeskGuard" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
centered = false
hframes = 8
frame = 7

[node name="Notifier" parent="." instance=ExtResource( 2 )]
position = Vector2( 21, -29 )

[node name="Flipable" type="Node2D" parent="."]
position = Vector2( 21, -22 )

[node name="FOV" type="Area2D" parent="Flipable"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Flipable/FOV"]
polygon = PoolVector2Array( -6, -18, 75, -18, 75, 22, 19, 22, 19, 3, -6, 3 )

[node name="LookTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ReadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )

[node name="RemoveNotifierTimer" type="Timer" parent="."]

[node name="DeskGuardDetect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 2.0
bus = "Sound"

[connection signal="body_entered" from="Flipable/FOV" to="." method="_on_FOV_body_entered"]
[connection signal="body_exited" from="Flipable/FOV" to="." method="_on_FOV_body_exited"]
[connection signal="timeout" from="LookTimer" to="." method="_on_LookTimer_timeout"]
[connection signal="timeout" from="ReadTimer" to="." method="_on_ReadTimer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
